platforms/drm: fix EglStreamBackend init

BUG: 438363